# cmake_template

./: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/image/: CMakeLists.txt  ImageConfig.cmake
src/image/include/: image.hpp
src/image/src/: image.cpp
